--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <slf4j-api.version>2.0.12</slf4j-api.version>
     <commons-lang3.version>3.14.0</commons-lang3.version>
     <jackson.version>2.16.1</jackson.version>
-    <mapstruct.version>1.6.0.Beta1</mapstruct.version>
+    <mapstruct.version>1.5.5.Final</mapstruct.version>
     <mockito.version>5.10.0</mockito.version>
     <jakarta.servlet-api.version>6.1.0-M1</jakarta.servlet-api.version>
     <jackson-datatype-jsr310.version>2.9.9</jackson-datatype-jsr310.version>
@@ -27,7 +27,6 @@
       <artifactId>slf4j-api</artifactId>
       <version>${slf4j-api.version}</version>
     </dependency>
-
 
     <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
     <dependency>
@@ -58,6 +57,13 @@
       <version>${mapstruct.version}</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct-processor -->
+    <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct-processor</artifactId>
+      <version>${mapstruct.version}</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
     <dependency>
       <groupId>org.mockito</groupId>
@@ -65,6 +71,7 @@
       <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
+
 
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
@@ -87,36 +94,20 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
         <configuration>
           <source>16</source>
           <target>16</target>
+          <!--<annotationProcessorPaths>
+            <path>
+              <groupId>org.mapstruct</groupId>
+              <artifactId>mapstruct-processor</artifactId>
+              <version>${mapstruct.version}</version>
+            </path>
+            &lt;!&ndash; other annotation processors &ndash;&gt;
+          </annotationProcessorPaths>-->
         </configuration>
       </plugin>
     </plugins>
-    <!--<plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>8</source>
-          <target>8</target>
-        </configuration>
-      </plugin>
-    </plugins>-->
-    <!--<plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>3.3.2</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>8</source>
-          <target>8</target>
-        </configuration>
-      </plugin>
-    </plugins>-->
   </build>
 </project>
