--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,28 @@
     <commons-lang3.version>3.14.0</commons-lang3.version>
     <jackson.version>2.16.1</jackson.version>
     <mapstruct.version>1.5.5.Final</mapstruct.version>
-    <mockito.version>5.10.0</mockito.version>
     <jakarta.servlet-api.version>6.1.0-M1</jakarta.servlet-api.version>
     <jackson-datatype-jsr310.version>2.9.9</jackson-datatype-jsr310.version>
     <jupiter.version>5.10.2</jupiter.version>
+    <logback.version>1.5.0</logback.version>
+    <jacoco.version>0.8.11</jacoco.version>
   </properties>
 
   <dependencies>
+
+    <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>${logback.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+      <version>${logback.version}</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -73,14 +88,6 @@
       <version>${mapstruct.version}</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>${mockito.version}</version>
-      <scope>test</scope>
-    </dependency>
-
 
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
@@ -115,18 +122,29 @@
               <artifactId>mapstruct-processor</artifactId>
               <version>${mapstruct.version}</version>
             </path>
-            &lt;!&ndash; other annotation processors &ndash;&gt;
           </annotationProcessorPaths>-->
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>${jacoco.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>report</id>
+            <phase>test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
-    <resources>
-      <resource>
-        <directory>src/main/resources</directory>
-        <includes>
-          <include>**/*.txt</include>
-        </includes>
-      </resource>
-    </resources>
-  </build>
+     </build>
 </project>
